Cambie el link para subir fotos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="back-content">
               <h2>Titulación de Krishna Pavez Torres</h2>
               <p>Gracias por acompañar este día especial. Sube aquí tus fotos o videos de la titulación en Terapia Ocupacional:</p>
-              <p><a class="link" id="drive-link" href="https://drive.google.com/drive/folders/1FWDZA78FPZVRZolvux8Z_t_xmvO8UB0A?usp=sharing" target="_blank" rel="noopener noreferrer">Abrir carpeta de Drive</a></p>
+              <p><a class="link" id="drive-link" href="https://drive.google.com/drive/folders/1eLVWWaAXegmHZ7MTy5KVgchjNzTqXkK_" target="_blank" rel="noopener noreferrer">Abrir carpeta de Drive</a></p>
             </div>
           </figure>
         </div>
