Actualizar index.html
Se cambio la imagen principal

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="float">
         <div class="flip-card" id="flip-card">
           <figure class="face front">
-            <img src="img/foto_titulacion.jpeg" alt="Invitación a la titulación">
+            <img src="img/invitacion_titulacion.png" alt="Invitación a la titulación">
           </figure>
           <figure class="face back">
             <div class="back-content">
