Actualizar index.html
Cambio URL Video

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="video-wrapper">
         <iframe
           id="video-frame"
-          src="https://drive.google.com/file/d/1rqu-F2dmNcc4Ff8Y2E62MB7OQM-Lx54j/preview"
+          src="https://drive.google.com/file/d/1vqe5rSuQi1nHF9wpNNWgWTXOXNN5KZ3n/view?usp=drivesdk"
           allow="autoplay; fullscreen"
           scrolling="no"
         ></iframe>
@@ -58,7 +58,7 @@
   <script src="config.js"></script>
   <script>
     const defaultDriveUrl = "https://drive.google.com/drive/folders/1FWDZA78FPZVRZolvux8Z_t_xmvO8UB0A?usp=sharing";
-    const defaultVideoUrl = "https://drive.google.com/file/d/1rqu-F2dmNcc4Ff8Y2E62MB7OQM-Lx54j/preview";
+    const defaultVideoUrl = "https://drive.google.com/file/d/1vqe5rSuQi1nHF9wpNNWgWTXOXNN5KZ3n/view?usp=drivesdk";
 
     const driveUrl = window.DRIVE_URL || defaultDriveUrl;
     const videoUrl = window.VIDEO_URL || defaultVideoUrl;
