Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       
     <section class="video-section">
       <h3>Video destacado</h3>
-      <p class="lead">Bienbenidos a mi historia univercitaria.</p>
+      <p class="lead">Bienvenidos a mi historia univercitaria.</p>
       <div class="video-wrapper">
         <iframe
           id="video-frame"
